src/objects/ffirule__IntegrationRuleSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>FinancialForce ClickLink settings</description>
    <fields>
        <fullName>ffirule__AllowBulkification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Bulkification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__IncludeInfoMessagesInLogs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the output of information messages related to each record ClickLink Rules processes. This setting generates a large amount of Log records that needs clearly back manually.</description>
        <label>Include Information Messages in Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__LicenseKey__c</fullName>
        <label>License Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SupportMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables some unexpected errors to be submitted back to FinancialForce.com for more detailed analysis.</description>
        <label>Support Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__SyncEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the ClickLink synchronization feature is enabled for the organization. When false, the ClickLink synchronization feature is disabled for the whole organization. The default value is true.</description>
        <label>Sync Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>ClickLink Settings</label>
</CustomObject>